--- a/style.css
+++ b/style.css
@@ -13,8 +13,9 @@ html{
 }
 
 html, body{
-    height: 150vh;
+    height: 120vh;
     width: 100vw;
+    
     /* min-height: 390px;
     min-width: 356px; */
     background-color: #664986;
@@ -22,10 +23,22 @@ html, body{
     
 }
 
+body{
+    width: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
+    align-content: flex-start;
+
+}
+
 
 nav{
     
-    height: 4.2vh;
+    height: 3.9vh;
     width: 100vw;
     color: #ffffff;
     background-color: #e2e8f0;
@@ -33,7 +46,9 @@ nav{
 
 ul {
     
-    height: 100%
+    height: 100%;    
+    margin-left: 10px;
+    
     /* padding-top: 10px;
     padding-right: 10px; */
 }
@@ -57,20 +72,21 @@ li{
 
 main{
     height: 80vh;
-    width: 100vw;    
+    width: 80vw;    
     min-height: 390px;
     display: flex;
     align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    align-content: space-between;
+    justify-content: space-between;
+    flex-direction: column;    
     margin-top: 50px;
 }
 
 .section-img-logo{
-    margin-bottom: 30px;
+    /* margin-bottom: 40px; */
     width: 100vw;
-    height: 15vh;
+    height: 13.5vh;
+    float: top;
+    
 }
 
 .section-form {
@@ -78,14 +94,20 @@ main{
     justify-content: space-between;
     align-items: center;
     flex-direction: column;
-    width: 23vw;
-    max-width: 24vw;
-    min-width: 320px;
-    height: 90%;
+    width: 100%;
+    /* max-width: 24vw; */
+    /* min-width: 280px; */
+    height: 100%;
     background-color: #ffffff;
     border-radius: 8px;
     
     
+}
+
+#nome7{
+
+    height: 67%;
+
 }
 
 .container-title-form-top{
@@ -124,8 +146,8 @@ form{
     background-color: #f5f5f5;
     width: 100%;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    align-items: center !important;
+    justify-content: center !important;
     border-top: 1px solid #ddd;
     border-bottom-left-radius: 8px;
     border-bottom-right-radius: 8px;
@@ -135,7 +157,7 @@ a{
     text-decoration: none;
     color: #664986;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     width: 100%;
 }
 
@@ -155,9 +177,10 @@ span{
 
 .container-forgot-password{
     height: 8%;
-    width: 17%;
+    width: 25%;
     display: flex;
     align-items: center;
+    justify-content: center;
     font-size: 1.2rem;
 }
 
@@ -299,28 +322,31 @@ input:hover{
     width: 100%;
 }
 
-.container-other-titles-row__right-column{
 
-    align-items: center; 
-    align-content: center;
+#nome1{
+    display: flex; 
+    align-items: center;
 }
 
-#row__left{
-    text-align: center; 
-    color: #70757a
+#nome2{
+    color:black; 
+    text-decoration: none;
 }
 
-#row__right{
-    flex-direction: row-reverse; 
-    text-align: center; 
-    color: #70757a
+#nome3{
+    width: 80vw;
 }
 
-#col__right{
-
-    padding-right: 20px;
-
+#nome4{
+    display: flex; 
+    justify-content: center; 
+    width: 100vw;
 }
+
+#nome6{
+    margin-left: 10px;
+}
+
 
 
 @media screen and (max-width: 800px) {
@@ -341,6 +367,10 @@ input:hover{
 }
 
 @media only screen and (orientation: landscape) and (max-height: 540px) {
+
+    body{
+        height: 180vh;
+    }
 
     
     
