--- a/style.css
+++ b/style.css
@@ -341,6 +341,14 @@ button{
     align-items: center;
 }
 
+.footer ul {
+    height: 30%; 
+    justify-content: center; 
+    padding: 0; 
+    margin: 0; 
+    width: 100%;
+
+}
 
 @media screen and (max-width: 767px) {
     .section-form{
@@ -368,8 +376,5 @@ button{
     
 }
 
-@media only screen and (orientation: landscape) and (max-height: 540px) {
-  
-    
-}
+
 
